--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: 15.x
           cache: 'npm'
+      - run: cd ./src
       - name: Install dependencies
         run: npm ci
       - name: Initialize deployment
