--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, '[deploy]')"
+    defaults:
+      run:
+        working-directory: 'src'
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js 15.x
@@ -19,7 +22,7 @@ jobs:
         with:
           node-version: 15.x
           cache: 'npm'
-      - run: cd ./src
+          cache-dependency-path: '**/package-lock.json'
       - name: Install dependencies
         run: npm ci
       - name: Initialize deployment
