--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,21 +9,27 @@ on:
       - published
 
 jobs:
-  Deploy:
+  Deployment:
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, '[deploy]')"
     defaults:
       run:
         working-directory: 'src'
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 15.x
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
+      - name: Install and Build 🔧 
         uses: actions/setup-node@v3
+          with:
+            node-version: 15.x
+            cache: 'npm'
+            cache-dependency-path: '**/package-lock.json'
+        run: |
+          npm ci
+          npm run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          node-version: 15.x
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-      - name: Install dependencies
-        run: npm ci
-      - name: Initialize deployment
-        run: npm run deploy
+          folder: build
