--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,14 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Install and Build 🔧 
+      - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 15.x
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
+
+      - name: Install and Build 🔧 
         run: |
           npm ci
           npm run build
