--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,9 @@ on:
       - published
 
 jobs:
-  Deployment:
+  Build:
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, '[deploy]')"
-    defaults:
-      run:
-        working-directory: 'src'
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
@@ -28,9 +25,10 @@ jobs:
 
       - name: Install and Build 🔧 
         run: |
+          cd src
           npm ci
           npm run build
-
+            
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
