--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,15 @@ on:
       - published
 
 jobs:
-  Build:
+  Deploy:
+    name: Automatic Deployment
     runs-on: ubuntu-latest
     if: "contains(github.event.head_commit.message, '[deploy]')"
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
-      - name: Use Node.js
+      - name: Use Node.js 🔧
         uses: actions/setup-node@v3
         with:
           node-version: 15.x
