Rename application in package.json and manifest

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Luca Taddeo",
+  "name": "Luca Taddeo's Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
