--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://lucataddeo.github.io/portfolio",
+  "homepage": "https://lucataddeo.com",
   "private": true,
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
